@@ -1,12 +1,8 @@
 == BEFORE NEXT RELEASE ==
- * filename/uri space req doc bug
- * fix warning: normalize code
 
 == SOON ==
  * samba filename conversion?
  * (g/s)etters for single components?
- * normalize relative URIs?
-   e.g. "../../abc/../def/" -> "../../def/"
  * Add configure options to disable Ansi or Unicode
  * Add example check_uri a la check_spiff
  * Filename helpers
